play-pit/CICD/Gitlab/GitLab-EE/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gitlab-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - gitlab.kx-as-code.local
    - registry.kx-as-code.local
  rules:
  - host: gitlab.kx-as-code.local
    http:
      paths:
       - path: /
         backend:
           serviceName: gitlab-webservice
           servicePort: 8181
  - host: registry.kx-as-code.local
    http:
      paths:
       - path: /
         backend:
           serviceName: gitlab-registry
           servicePort: 5000
